Add JEntityQuery filter in operator, add webhook log query API
