# webhook/api/resteasy/src/main/java/com/plantssoil/webhook/api/impl/EngineApiServiceImpl.java
@@ -9,8 +9,27 @@ import com.plantssoil.webhook.api.EngineApiService;
 import com.plantssoil.webhook.api.NotFoundException;
 
 @RequestScoped
-@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.JavaResteasyServerCodegen", date = "2025-02-05T11:58:30.837020300+08:00[Asia/Shanghai]")
+@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.JavaResteasyServerCodegen", date = "2025-02-07T18:18:51.966634600+08:00[Asia/Shanghai]")
 public class EngineApiServiceImpl implements EngineApiService {
+    @Override
+    public Response findAllPublisherWebhookLogs(String publisherId, Integer page, Integer pageSize, String dataGroup, SecurityContext securityContext)
+            throws NotFoundException {
+        // do some magic!
+        return Response.ok().entity(new ApiResponseMessage(ApiResponseMessage.OK, "magic!")).build();
+    }
+
+    @Override
+    public Response findAllSubscriberWebhookLogs(String webhookId, Integer page, Integer pageSize, SecurityContext securityContext) throws NotFoundException {
+        // do some magic!
+        return Response.ok().entity(new ApiResponseMessage(ApiResponseMessage.OK, "magic!")).build();
+    }
+
+    @Override
+    public Response findWebhookLogLines(String requestId, String webhookId, SecurityContext securityContext) throws NotFoundException {
+        // do some magic!
+        return Response.ok().entity(new ApiResponseMessage(ApiResponseMessage.OK, "magic!")).build();
+    }
+
     @Override
     public Response getEngineVersion(SecurityContext securityContext) throws NotFoundException {
         // do some magic!
